--- a/client/src/components/LeftSidebar/LeftSidebar.css
+++ b/client/src/components/LeftSidebar/LeftSidebar.css
@@ -44,10 +44,36 @@
     border-right: solid 3px #ef8236;
 }
 
-@media screen and (max-width: 760px) {
+.community-1, .gpt-1{
+    display: none;
+    font-size: 15px;
+    font-weight: 500;
+    color: #ef8236;
+    border: solid 1px #f8f9f9;
+    margin-bottom: 10px;
+    padding: 10px 15px;
+
+}
+
+.community-1:hover, .gpt-1:hover{
+    border: solid 1px #ef8236;
+    color: #ef8236;
+    background-color: rgb(226, 226, 226);
+    border-radius: 20px;
+}
+
+@media screen and (max-width: 770px) {
     .left-sidebar {
       position: absolute;
+      background-color: white; 
       transform: translateX(-100%);
       z-index: 10;
+      min-height: 100vh;
     }
   }
+
+@media screen and (max-width: 680px) {
+    .community-1, .gpt-1{
+        display: block;
+    }
+}
