--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
     border-top: solid 3px #ef8236;
     box-shadow: 0px 1px 5px #00000033;
     position: fixed;
-    z-index: 5;
+    z-index: 15;
     top: 0%;
     left: 0%;
     background-color: #f8f9f9;
@@ -20,6 +20,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.slide-in-icon{
+    display: none;
+    border: none;
+    background: none;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.2s;
+    padding: 5px 6px 3px 6px;
 }
 
 .nav-logo{
@@ -41,7 +51,8 @@
     padding: 10px 20px;
 }
 
-.nav-item:hover{
+.nav-item:hover,
+.slide-in-icon:hover{
     background-color: rgb(226, 226, 226);
 }
 
@@ -62,7 +73,7 @@
 
 .navbar form{
     flex-grow: 1;
-    padding: 0px 12px;
+    padding: 0px 40px;
     position: relative;
 }
 
@@ -78,10 +89,11 @@
 .navbar form .search-icon{
     position: absolute;
     top: 8px;
-    left: 25px;
+    left: 50px;
 }
 
 .nav-links{
+    margin-left: 10px;
     padding: 7px 13px;
     border: solid 1px blue;
     border-radius: 3px;
@@ -94,19 +106,28 @@
 }
 
 @media screen and (max-width: 1120px) {
-    .navbar .navbar-1 form {
-      display: none;
+    .navbar form{
+        display: none;
     }
-  }
-  
-  @media screen and (max-width: 760px) {
-    .slide-in-icon {
-      display: block;
+}
+
+@media screen and (max-width: 900px) {
+    .nav-exclude{
+        display: none;
     }
-  }
-  
-  @media screen and (max-width: 620px) {
-    .navbar .navbar-1 .res-nav {
-      display: none;
+}
+
+@media screen and (max-width: 770px) {
+    .slide-in-icon{
+        display: block;
     }
-  }
+}
+
+@media screen and (max-width: 680px) {
+    .community, .gpt{
+        display: none;
+    }
+    .navbar{
+        justify-content: space-around;
+    }
+}
