--- a/client/src/components/RightSidebar/RightSidebar.css
+++ b/client/src/components/RightSidebar/RightSidebar.css
@@ -65,3 +65,9 @@
     border-radius: 2px;
     font-size: 13px;
   }
+
+@media screen and (max-width: 1020px) {
+  .right-sidebar{
+    display: none;
+  }
+}
